--- a/HIRun2015Ana/notebook/TrackingEfficiencyMustRead.ipynb
+++ b/HIRun2015Ana/notebook/TrackingEfficiencyMustRead.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "## <hr> Purpose of the notes\n",
-    "- Available efficiency \"table\" \n",
+    "- \"Table of the tables\" - Available efficiency tables\n",
     "- MC andn Data samples\n",
     "- Run instructions\n",
     "- MC and Data cut variable comparison\n",
@@ -33,21 +33,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <hr> Available efficiency \"table\" so far\n",
+    "## <hr> \"Table of the tables\"\n",
     "\n",
     "if you want to use the current framework to do track correction, you should git clone the whole Repo, \n",
-    "<pre><code> git clone https://github.com/cmsHiTracking/TrackingCode.git </pre></code>\n",
+    "<pre><code> git clone https://github.com/cmsHiTracking/TrackingCode.git </pre></code>, and then go to HIRun2015Ana/macros to see <strong> Demo.C </strong> for instructions to get correction factors. \n",
     "\n",
-    "then go to HIRun2015Ana to see <strong> Demo.C </strong> for instructions to get correction factors. \n",
     "\n",
-    "The tables that are currently available:\n",
-    "- <strong> PbPb_eff_MC_v1.root</strong>, which corresponds to the MB sample listed below\n",
+    "### <strong> The current available efficiency correction tables are listed in the table below, which has pp and PbPb in different track cuts and samples.</strong>\n",
     "\n",
-    "This table is currently served as an example. There are a number of things that are not corrected. For example, there is no updated alignment (no updated GlobalTag) in this sample, nor as corrected in this table. Also, there is no vertex reweighting in this table. \n",
+    "- The \"MB\" and \"dijet\" are correspondingn to MinBias and dijet embedded samples\n",
+    "- The names in the table are corresponding to the root files that are in <A HREF=\"https://github.com/cmsHiTracking/TrackingCode/tree/master/HIRun2015Ana/rootfile\">here</A>, which one can use for corrections. \n",
+    "- Click the name of each file would redirect you to the performance plots!\n",
     "\n",
-    "<strong> \n",
-    "if one is looking for a sample table, this one should be good enough. However, for real analysis, analyzers should either wait for the tracking team to update this table with AGREE set of cuts and run conditions or produce their own table with proof of validation </strong>\n",
+    "\n",
+    "\n",
+    "### Attention!\n",
+    "\n",
+    "One should note that the \"secondary rates\" of PbPb embedded sample is not correct, while the efficiency and fake rate are correct. The reason why the \"secondary rates\" are messed up is because all tracks that come from the background (PbPb) are treated as \"Secondary\" tracks. Only primary tracks from pythia generator are primary tracks, which makes the \"secondary rate\" mostly above 95%. \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Systems \t|  Non-Track-Trigger  \t|    Track-Trigger   \t|\n",
+    "|:-------:\t|:-------------------:\t|:------------------:\t|\n",
+    "|   PbPb  \t|   <A HREF=\"https://github.com/cmsHiTracking/TrackingCode/tree/master/pileUpFilter/files\">PbPb_MB_NTT.root</A>  \t|   PbPb_MB_TT.root  \t|\n",
+    "|         \t| PbPb_dijet_NTT.root \t| PbPb_dijet_TT.root \t|\n",
+    "|    pp   \t|    pp_MB_NTT.root   \t|    pp_MB_TT.root   \t|\n",
+    "|         \t|  pp_dijet_NTT.root  \t|  pp_dijet_TT.root  \t|\n"
    ]
   },
   {
